--- a/requirements.txt
+++ b/requirements.txt
@@ -3,23 +3,35 @@ attrs==25.4.0
 autobahn==24.4.2
 Automat==25.4.16
 cffi==2.0.0
+channels==4.3.1
+channels_redis==4.3.0
 constantly==23.10.4
 cryptography==46.0.2
 daphne==4.2.1
+dj-database-url==3.0.1
 Django==5.2.7
+djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
+dotenv==0.9.9
+drf-nested-routers==0.95.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 markdown-it-py==4.0.0
 mdurl==0.1.2
+msgpack==1.1.2
 narwhals==2.7.0
 packaging==25.0
 plotly==6.3.1
+psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
 Pygments==2.19.2
+PyJWT==2.10.1
 pyOpenSSL==25.3.0
+python-dotenv==1.1.1
+redis==7.0.1
 rich==14.1.0
 service-identity==24.2.0
 setuptools==80.9.0
@@ -27,4 +39,5 @@ sqlparse==0.5.3
 Twisted==25.5.0
 txaio==25.9.2
 typing_extensions==4.15.0
+whitenoise==6.11.0
 zope.interface==8.0.1
